--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>My Site</title>
+  <title>N.A.B</title>
   <style>
     html, body {
       height: 100%;
@@ -12,8 +12,30 @@
       background-size: cover;
       display: flex;
       flex-direction: column;
-      align-items: center;
       font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+      align-items: center;
+    }
+
+    /* Minimalistic tab menu */
+    .tab-menu {
+      display: flex;
+      gap: 16px;
+      margin-top: 16px;
+      align-self: flex-start;
+      margin-left: 16px;
+    }
+
+    .tab-menu a {
+      text-decoration: none;
+      color: #fff;
+      background: rgba(0,0,0,0.6);
+      padding: 8px 16px;
+      font-size: 1em;
+      border-radius: 0; /* NO ROUNDED CORNERS */
+    }
+
+    .tab-menu a:hover {
+      background: rgba(0,0,0,0.8);
     }
 
     .title-image {
@@ -23,12 +45,14 @@
       margin-bottom: 24px;
     }
 
-    .ad-image {
-      width: 200px;
-      height: 200px; /* square ad */
-      border: 2px solid #ccc;
-      border-radius: 12px;
+    /* Square ad button panel */
+    .ad-button {
+      width: 400px;
+      height: 400px;
+      border: 2px solid #000;
       cursor: pointer;
+      display: block;
+      border-radius: 0; /* NO ROUNDED CORNERS */
     }
 
     /* Popup overlay */
@@ -46,30 +70,51 @@
       font-size: 2em;
       z-index: 9999;
       backdrop-filter: blur(8px);
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    .enter-button {
+      padding: 12px 24px;
+      font-size: 1em;
+      cursor: pointer;
+      background: #fff;
+      color: #000;
+      border: none;
+      border-radius: 0; /* NO ROUNDED CORNERS */
     }
   </style>
 </head>
 <body>
-  <!-- Big title image -->
-  <img src="title.png" alt="Title" class="title-image">
 
-  <!-- Square ad image linking somewhere -->
+  <!-- Minimalistic tab menu -->
+  <div class="tab-menu">
+    <a href="books.hym">Books</a>
+  </div>
+
+  <!-- Big title image -->
+  <img src="title.gif" alt="Title" class="title-image">
+
+  <!-- Square ad button panel -->
   <a href="https://example.com" target="_blank">
-    <img src="ad.png" alt="Advertisement" class="ad-image">
+    <img src="ad.png" alt="Advertisement" class="ad-button">
   </a>
 
   <!-- Popup overlay -->
-  <div class="overlay" id="enterOverlay">Press ENTER to enter</div>
+  <div class="overlay" id="enterOverlay">
+    <div>Click to enter</div>
+    <button class="enter-button" id="enterBtn">Enter</button>
+  </div>
 
   <!-- Audio -->
-  <audio id="bgMusic" src="music.mp3"></audio>
+  <audio id="bgMusic" src="music.mp3" loop></audio>
 
   <script>
-    document.addEventListener('keydown', function(e) {
-      if(e.key === 'Enter') {
-        document.getElementById('enterOverlay').style.display = 'none';
-        document.getElementById('bgMusic').play();
-      }
+    document.getElementById('enterBtn').addEventListener('click', function() {
+      document.getElementById('enterOverlay').style.display = 'none';
+      var music = document.getElementById('bgMusic');
+      music.play();
+      music.loop = true;
     });
   </script>
 </body>
