--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Group Site</title>
 <style>
-    /* Basic Reset */
     * {
         margin: 0;
         padding: 0;
@@ -16,8 +15,8 @@
         width: 100%;
         height: 100%;
         font-family: Arial, sans-serif;
-        background: #111; /* Fallback bg */
-        overflow: hidden;
+        background: #111;
+        overflow-x: hidden;
     }
 
     /* Enter Screen */
@@ -41,35 +40,15 @@
     #mainContent {
         display: none;
         width: 100%;
-        height: 100%;
+        min-height: 100%;
         overflow-y: auto;
-    }
-
-    /* Background Title GIF */
-    .title-bg {
-        width: 100%;
-        height: 300px; /* Adjust as needed */
-        background: url('title.gif') no-repeat center center;
-        background-size: cover;
-        display: flex;
-        align-items: flex-end;
-        justify-content: center;
-        position: relative;
-    }
-
-    /* Banner Ad */
-    .banner-ad {
-        width: 100%;
-        height: 200px;
-        background: url('ad.png') no-repeat center center;
-        background-size: cover;
-        cursor: pointer;
+        background: #111;
     }
 
     /* Menu Panel */
     .menu-panel {
         width: 100%;
-        height: 60px;
+        height: 50px;
         background-color: #222;
         display: flex;
         align-items: center;
@@ -81,10 +60,9 @@
         border: none;
         color: white;
         height: 100%;
-        padding: 0 20px;
+        padding: 0 15px;
         cursor: pointer;
-        font-size: 16px;
-        text-transform: uppercase;
+        font-size: 14px;
         margin-right: 2px;
         outline: none;
     }
@@ -92,30 +70,43 @@
     .menu-panel button:hover {
         background-color: #666;
     }
+
+    /* Background Title GIF */
+    .title-bg {
+        width: 300px; /* smaller width */
+        height: 150px; /* smaller height */
+        margin: 20px auto;
+        background: url('title.gif') no-repeat center center;
+        background-size: contain;
+    }
+
+    /* Banner Ad */
+    .banner-ad {
+        width: 350px; /* smaller width */
+        height: 100px; /* smaller height */
+        margin: 20px auto;
+        background: url('ad.png') no-repeat center center;
+        background-size: contain;
+        cursor: pointer;
+    }
 </style>
 </head>
 <body>
 
-<!-- Enter Screen -->
 <div id="enterScreen">Enter</div>
 
-<!-- Main Content -->
 <div id="mainContent">
-    <!-- Menu -->
     <div class="menu-panel">
         <button onclick="location.href='books.html'">Books</button>
         <button onclick="location.href='contact.html'">Contact</button>
         <button onclick="location.href='membership.html'">Membership</button>
     </div>
 
-    <!-- Background Title GIF -->
     <div class="title-bg"></div>
 
-    <!-- Banner Ad -->
     <div class="banner-ad" onclick="location.href='certainpage.html'"></div>
 </div>
 
-<!-- Background Music -->
 <audio id="bgMusic" src="music.mp3" loop></audio>
 
 <script>
