--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
     body, html {
         width: 100%;
-        height: 100%;
+        min-height: 100%;
         font-family: Arial, sans-serif;
-        background: #111;
+        background: url('image.png') no-repeat center center fixed;
+        background-size: cover;
         overflow-x: hidden;
     }
 
@@ -36,20 +37,19 @@
         z-index: 9999;
     }
 
-    /* Main Site */
+    /* Main Content */
     #mainContent {
         display: none;
         width: 100%;
         min-height: 100%;
         overflow-y: auto;
-        background: #111;
     }
 
     /* Menu Panel */
     .menu-panel {
         width: 100%;
         height: 50px;
-        background-color: #222;
+        background-color: rgba(34, 34, 34, 0.9);
         display: flex;
         align-items: center;
         justify-content: flex-start;
@@ -73,8 +73,10 @@
 
     /* Background Title GIF */
     .title-bg {
-        width: 300px; /* smaller width */
-        height: 150px; /* smaller height */
+        width: 1200px;
+        max-width: 90%;
+        height: 600px;
+        max-height: 50vh;
         margin: 20px auto;
         background: url('title.gif') no-repeat center center;
         background-size: contain;
@@ -82,31 +84,49 @@
 
     /* Banner Ad */
     .banner-ad {
-        width: 350px; /* smaller width */
-        height: 100px; /* smaller height */
+        width: 1050px;
+        max-width: 90%;
+        height: 300px;
+        max-height: 30vh;
         margin: 20px auto;
         background: url('ad.png') no-repeat center center;
         background-size: contain;
         cursor: pointer;
+        border: 2px solid #fff; /* optional to highlight clickable area */
+    }
+
+    @media (max-width: 768px) {
+        .title-bg {
+            height: 300px;
+        }
+        .banner-ad {
+            height: 150px;
+        }
     }
 </style>
 </head>
 <body>
 
+<!-- Enter Screen -->
 <div id="enterScreen">Enter</div>
 
+<!-- Main Content -->
 <div id="mainContent">
+    <!-- Menu -->
     <div class="menu-panel">
         <button onclick="location.href='books.html'">Books</button>
         <button onclick="location.href='contact.html'">Contact</button>
         <button onclick="location.href='membership.html'">Membership</button>
     </div>
 
+    <!-- Background Title GIF -->
     <div class="title-bg"></div>
 
-    <div class="banner-ad" onclick="location.href='certainpage.html'"></div>
+    <!-- Banner Ad -->
+    <div class="banner-ad" onclick="window.location.href='https://example.com'"></div>
 </div>
 
+<!-- Background Music -->
 <audio id="bgMusic" src="music.mp3" loop></audio>
 
 <script>
