--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
 
     /* Background Title GIF */
     .title-bg {
-        width: 1200px;
+        width: 600px; /* mid-size */
         max-width: 90%;
-        height: 600px;
-        max-height: 50vh;
+        height: 300px; /* mid-size */
         margin: 20px auto;
         background: url('title.gif') no-repeat center center;
         background-size: contain;
@@ -84,23 +83,21 @@
 
     /* Banner Ad */
     .banner-ad {
-        width: 1050px;
+        width: 700px; /* mid-size */
         max-width: 90%;
-        height: 300px;
-        max-height: 30vh;
+        height: 200px; /* mid-size */
         margin: 20px auto;
         background: url('ad.png') no-repeat center center;
         background-size: contain;
         cursor: pointer;
-        border: 2px solid #fff; /* optional to highlight clickable area */
     }
 
     @media (max-width: 768px) {
         .title-bg {
-            height: 300px;
+            height: 200px;
         }
         .banner-ad {
-            height: 150px;
+            height: 120px;
         }
     }
 </style>
