--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
     .side-panel {
         position: fixed;
         top: 50px; /* below menu */
-        width: 180px;
+        width: 220px; /* thicker */
         height: calc(100% - 50px);
         background-color: rgba(0,0,0,0.6);
         color: white;
-        padding: 10px;
+        padding: 15px;
         overflow-y: auto;
         display: flex;
         flex-direction: column;
@@ -118,11 +118,11 @@
     }
 
     .side-panel.left {
-        left: 0;
+        left: 20px; /* space from edge */
     }
 
     .side-panel.right {
-        right: 0;
+        right: 20px; /* space from edge */
     }
 
     .side-panel img {
@@ -139,7 +139,7 @@
 
     @media (max-width: 1024px) {
         .side-panel {
-            display: none; /* hide panels on small screens */
+            display: none; /* hide panels on smaller screens */
         }
     }
 
