--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     .side-panel {
         position: fixed;
         top: 50px; /* below menu */
-        width: 220px; /* thicker */
+        width: 440px; /* 2× thicker than previous 220px */
         height: calc(100% - 50px);
         background-color: rgba(0,0,0,0.6);
         color: white;
@@ -168,7 +168,7 @@
     </div>
     <div class="side-panel right">
         <img src="news.png" alt="News">
-        <p>Your custom text here</p>
+        <p>N.A.D active in Amsterdam today. . </p>
     </div>
 
     <!-- Menu -->
