--- a/index.html
+++ b/index.html
@@ -164,7 +164,19 @@
 
     <!-- Side Panels -->
     <div class="side-panel left">
-        <p>No upcoming events</p>
+        <p>
+The Sinister Initiation Ritual: All new members must participate in a dark, ritualistic initiation ceremony involving blood sacrifice To MoonGoat Azov and occult practices to demonstrate their commitment to the Acceleration ofthe dark powers. .
+
+ Der, N.A.B Endorses The Sinister Power that will accelerate the Apoctylic Ending of the world, With the taming of the power and theirby the Power Held In Our hands We Shall Bring The End Closer, End Set Fire To This Foresaken World Untill its nothing but atomic ash
+
+Isolation of Children: Children are taken from their families at a young age and raised within the compound to ensure loyalty and obedience. They are trained in combat and survival skills. Or Lets just say Thou Child Under 5 Years Of Age (Asian) Shall Portake in Scat Ritual.
+
+The Scared Secrey Of The Ritualistic Powers Granted To Our Accelerationist Group Shall not be spread, If Thou Is Spread Him Shall Slay his Blood In Scat Torture.
+
+Secrecy: Members are not allowed to discuss the cult's activities outside the compound. They are monitored for any signs of disloyalty or dissent.
+
+           
+           s</p>
     </div>
     <div class="side-panel right">
         <img src="news.png" alt="News">
