--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         width: 100%;
         min-height: 100%;
         font-family: Arial, sans-serif;
-        background: url('image.png') no-repeat center center fixed;
+        background: url('ba.png') no-repeat center center fixed;
         background-size: cover;
         overflow-x: hidden;
     }
@@ -165,11 +165,11 @@
     <!-- Side Panels -->
     <div class="side-panel left">
         <p>
-The Sinister Initiation Ritual: All new members must participate in a dark, ritualistic initiation ceremony involving blood sacrifice To MoonGoat Azov and occult practices to demonstrate their commitment to the Acceleration ofthe dark powers. .
+The Sinister Initiation Ritual: All new members must participate in a dark, ritualistic initiation ceremony involving blood sacrifice To MoonGoat Azov and occult practices to demonstrate their commitm[...]
 
- Der, N.A.B Endorses The Sinister Power that will accelerate the Apoctylic Ending of the world, With the taming of the power and theirby the Power Held In Our hands We Shall Bring The End Closer, End Set Fire To This Foresaken World Untill its nothing but atomic ash
+ Der, N.A.B Endorses The Sinister Power that will accelerate the Apoctylic Ending of the world, With the taming of the power and theirby the Power Held In Our hands We Shall Bring The End Closer, End [...]
 
-Isolation of Children: Children are taken from their families at a young age and raised within the compound to ensure loyalty and obedience. They are trained in combat and survival skills. Or Lets just say Thou Child Under 5 Years Of Age (Asian) Shall Portake in Scat Ritual.
+Isolation of Children: Children are taken from their families at a young age and raised within the compound to ensure loyalty and obedience. They are trained in combat and survival skills. Or Lets jus[...]
 
 The Scared Secrey Of The Ritualistic Powers Granted To Our Accelerationist Group Shall not be spread, If Thou Is Spread Him Shall Slay his Blood In Scat Torture.
 
