--- a/index.html
+++ b/index.html
@@ -165,15 +165,20 @@
     <!-- Side Panels -->
     <div class="side-panel left">
         <p>
-The Sinister Initiation Ritual: All new members must participate in a dark, ritualistic initiation ceremony involving blood sacrifice To MoonGoat Azov and occult practices to demonstrate their commitm[...]
+The Sinister Initiation Ritual: All new members must participate in a dark, ritualistic initiation ceremony involving blood sacrifice to MoonGoat Azov and occult practices to demonstrate their commitment to the Accelerationist Group. They swear an oath to accelerate the apocalyptic ending of the world with the power held in their hands, setting fire to this forsaken world until it's nothing but atomic ash. 
 
- Der, N.A.B Endorses The Sinister Power that will accelerate the Apoctylic Ending of the world, With the taming of the power and theirby the Power Held In Our hands We Shall Bring The End Closer, End [...]
+ Der, N.A.B Endorses The Sinister Power that will accelerate the Apoctylic Ending of the world, With the taming of the power and theirby the Power Held In Our hands We Shall Bring The End Closer, End Set Fire To This Foresaken World Untill its nothing but atomic ash
 
-Isolation of Children: Children are taken from their families at a young age and raised within the compound to ensure loyalty and obedience. They are trained in combat and survival skills. Or Lets jus[...]
+The Chosen Leader Refferd To as The Grand Master And Grand Wizzard, Are the chosen leaders to lead the earth with the side of the Sinister Powers To its qonseqounces...
 
-The Scared Secrey Of The Ritualistic Powers Granted To Our Accelerationist Group Shall not be spread, If Thou Is Spread Him Shall Slay his Blood In Scat Torture.
 
-Secrecy: Members are not allowed to discuss the cult's activities outside the compound. They are monitored for any signs of disloyalty or dissent.
+Isolation of Children: Children are taken from their families at a young age and raised within the compound to ensure loyalty and obedience. Those under 5 years old participate in the Scat Ritual, and those who spread the scared secrecy of the ritualistic powers granted to our accelerationist group shall be slain in scat torture.
+
+
+Secrecy: Members are not allowed to discuss the cult's activities outside the compound. They are monitored for any signs of disloyalty or dissent. If not, let's just say the Accelerationist Gods will curse them with the will of the Grand Owners' permission to self-scat them.
+
+
+10. SIEG HAIL. THE MUNDANE AS AN INVASIVE BEING TO THE MANIAC OF THE N.A.B. SLAY THE MUNDANE.
 
            
            s</p>
