Refactor layout and add RGB text animation
Removed unnecessary side panels and menu content, added RGB text animation and adjusted layout.

--- a/index.html
+++ b/index.html
@@ -42,105 +42,44 @@
         display: none;
         width: 100%;
         min-height: 100%;
+        text-align: center;
+        padding-top: 60px;
         position: relative;
-        overflow-x: hidden;
-        padding-top: 50px; /* for menu */
     }
 
-    /* Menu Panel */
-    .menu-panel {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 50px;
-        background-color: rgba(34, 34, 34, 0.9);
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        z-index: 10;
-    }
-
-    .menu-panel button {
-        background-color: #444;
-        border: none;
-        color: white;
-        height: 100%;
-        padding: 0 15px;
-        cursor: pointer;
-        font-size: 14px;
-        margin-right: 2px;
-        outline: none;
-    }
-
-    .menu-panel button:hover {
-        background-color: #666;
-    }
-
-    /* Background Title GIF */
+    /* Title */
     .title-bg {
         width: 600px;
         max-width: 90%;
         height: 300px;
-        margin: 20px auto;
+        margin: 0 auto 20px auto;
         background: url('title.gif') no-repeat center center;
         background-size: contain;
-        position: relative;
-        z-index: 1;
     }
 
-    /* Banner Ad */
+    /* Ad Banner */
     .banner-ad {
         width: 700px;
         max-width: 90%;
         height: 200px;
-        margin: 20px auto;
+        margin: 0 auto 20px auto;
         background: url('ad.png') no-repeat center center;
         background-size: contain;
         cursor: pointer;
-        position: relative;
-        z-index: 1;
     }
 
-    /* Side Panels */
-    .side-panel {
-        position: fixed;
-        top: 50px; /* below menu */
-        width: 440px; /* 2× thicker than previous 220px */
-        height: calc(100% - 50px);
-        background-color: rgba(0,0,0,0.6);
-        color: white;
-        padding: 15px;
-        overflow-y: auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+    /* RGB Text Animation */
+    @keyframes rgbText {
+        0% { color: red; }
+        33% { color: lime; }
+        66% { color: blue; }
+        100% { color: red; }
     }
 
-    .side-panel.left {
-        left: 20px; /* space from edge */
-    }
-
-    .side-panel.right {
-        right: 20px; /* space from edge */
-    }
-
-    .side-panel img {
-        max-width: 100%;
-        margin-bottom: 10px;
-    }
-
-    .site-content {
-        max-width: 900px;
-        margin: 0 auto;
-        position: relative;
-        z-index: 1;
-    }
-
-    @media (max-width: 1024px) {
-        .side-panel {
-            display: none; /* hide panels on smaller screens */
-        }
+    .rgb-text {
+        font-size: 20px;
+        font-weight: bold;
+        animation: rgbText 2s linear infinite;
     }
 
     @media (max-width: 768px) {
@@ -151,7 +90,6 @@
             height: 120px;
         }
     }
-
 </style>
 </head>
 <body>
@@ -161,46 +99,9 @@
 
 <!-- Main Content -->
 <div id="mainContent">
-
-    <!-- Side Panels -->
-    <div class="side-panel left">
-        <p>
-The Sinister Initiation Ritual: All new members must participate in a dark, ritualistic initiation ceremony involving blood sacrifice to MoonGoat Azov and occult practices to demonstrate their commitment to the Accelerationist Group. They swear an oath to accelerate the apocalyptic ending of the world with the power held in their hands, setting fire to this forsaken world until it's nothing but atomic ash. 
-
- Der, N.A.B Endorses The Sinister Power that will accelerate the Apoctylic Ending of the world, With the taming of the power and theirby the Power Held In Our hands We Shall Bring The End Closer, End Set Fire To This Foresaken World Untill its nothing but atomic ash
-
-The Chosen Leader Refferd To as The Grand Master And Grand Wizzard, Are the chosen leaders to lead the earth with the side of the Sinister Powers To its qonseqounces...
-
-
-Isolation of Children: Children are taken from their families at a young age and raised within the compound to ensure loyalty and obedience. Those under 5 years old participate in the Scat Ritual, and those who spread the scared secrecy of the ritualistic powers granted to our accelerationist group shall be slain in scat torture.
-
-
-Secrecy: Members are not allowed to discuss the cult's activities outside the compound. They are monitored for any signs of disloyalty or dissent. If not, let's just say the Accelerationist Gods will curse them with the will of the Grand Owners' permission to self-scat them.
-
-
-10. SIEG HAIL. THE MUNDANE AS AN INVASIVE BEING TO THE MANIAC OF THE N.A.B. SLAY THE MUNDANE.
-
-           
-           s</p>
-    </div>
-    <div class="side-panel right">
-        <img src="news.png" alt="News">
-        <p>N.A.D active in Amsterdam today. . </p>
-    </div>
-
-    <!-- Menu -->
-    <div class="menu-panel">
-        <button onclick="location.href='books.html'">Books</button>
-        <button onclick="location.href='contact.html'">Contact</button>
-        <button onclick="location.href='membership.html'">Membership</button>
-    </div>
-
-    <!-- Main site content -->
-    <div class="site-content">
-        <div class="title-bg"></div>
-        <div class="banner-ad" onclick="window.location.href='https://example.com'"></div>
-    </div>
-
+    <div class="title-bg"></div>
+    <div class="banner-ad" onclick="window.location.href='https://example.com'"></div>
+    <p class="rgb-text">telegram</p>
 </div>
 
 <!-- Background Music -->
