--- a/index.html
+++ b/index.html
@@ -77,9 +77,21 @@
     }
 
     .rgb-text {
-        font-size: 20px;
+        font-size: 22px;
         font-weight: bold;
         animation: rgbText 2s linear infinite;
+    }
+
+    /* Custom User Text (white with black outline) */
+    .custom-text {
+        margin-top: 8px;
+        font-size: 18px;
+        color: white;
+        text-shadow:
+            -1px -1px 0 black,
+             1px -1px 0 black,
+            -1px  1px 0 black,
+             1px  1px 0 black;
     }
 
     @media (max-width: 768px) {
@@ -101,7 +113,11 @@
 <div id="mainContent">
     <div class="title-bg"></div>
     <div class="banner-ad" onclick="window.location.href='https://example.com'"></div>
-    <p class="rgb-text">telegram</p>
+    <p class="rgb-text">TELEGRAM</p>
+    <p class="custom-text">
+
+       The Sinister Initiation Ritual: All new members must participate in a dark, ritualistic initiation ceremony involving blood sacrifice to MoonGoat Azov and occult practices to demonstrate their commitment to the Accelerationist Group. They swear an oath to accelerate the apocalyptic ending of the world with the power held in their hands, setting fire to this forsaken world until it's nothing but atomic ash. Der, N.A.B Endorses The Sinister Power that will accelerate the Apoctylic Ending of the world, With the taming of the power and theirby the Power Held In Our hands We Shall Bring The End Closer, End Set Fire To This Foresaken World Untill its nothing but atomic ash The Chosen Leader Refferd To as The Grand Master And Grand Wizzard, Are the chosen leaders to lead the earth with the side of the Sinister Powers To its qonseqounces... Isolation of Children: Children are taken from their families at a young age and raised within the compound to ensure loyalty and obedience. Those under 5 years old participate in the Scat Ritual, and those who spread the scared secrecy of the ritualistic powers granted to our accelerationist group shall be slain in scat torture. Secrecy: Members are not allowed to discuss the cult's activities outside the compound. They are monitored for any signs of disloyalty or dissent. If not, let's just say the Accelerationist Gods will curse them with the will of the Grand Owners' permission to self-scat them. 10. SIEG HAIL. THE MUNDANE AS AN INVASIVE BEING TO THE MANIAC OF THE N.A.B. SLAY THE MUNDANE.
+    </p> <!-- You can replace this line -->
 </div>
 
 <!-- Background Music -->
